# scouting-2022

./: .replit  app.py  bluealliance.py  calculator.py  db.sqlite3  db.sqllite3  file1.json  main.py  pyproject.toml  scrape.py
bluealliance/: 2022melew_ma.json  main.py  matches.json  team_151.json  teams.json
blueallience/: file2.json  info.json  main.py
calcfiles/: comp_teams.json  team_1058.json  team_1247.json  team_126.json  team_1277.json  team_1307.json  team_131.json  team_151.json  team_1512.json  team_1721.json  team_1729.json  team_1768.json  team_1922.json  team_2262.json  team_3467.json  team_3566.json  team_467.json  team_4761.json  team_4909.json  team_4925.json  team_4987.json  team_501.json  team_5491.json  team_5902.json  team_6328.json  team_663.json  team_6690.json  team_6762.json  team_6763.json  team_6895.json  team_7407.json  team_78.json  team_7913.json  team_8013.json  team_8046.json  team_811.json  team_8708.json  team_8724.json  team_88.json  team_95.json
comptimes/: competition.py  da_matches.json  main.py  rankings.json  sorted.py
oldcode/: 2022melew_matches.json  4169.json  main.py  matches.json  teams.json
static/: style.css
templates/: index.html  upload.html
