[tool.poetry]
name = "repl_python3_scouting-2022"
version = "0.1.0"
description = ""
authors = ["TheNoirAngel <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pandas = "^1.4.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
